tests/fail/short_arry_with_comma_end.php
<?php

class A
{
    const AAA = [
        1
    ];

    public function test()
    {
        $a = [
            [1,2],
            [
                1
            ],
        ];
    }
}
